--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "del": "latest",
     "gulp": "latest",
     "gulp-autoprefixer": "latest",
-    "gulp-clean-css": "^latest",
+    "gulp-clean-css": "latest",
     "gulp-file-include": "latest",
     "gulp-fonter": "latest",
     "gulp-group-css-media-queries": "latest",
